--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script src="https://kit.fontawesome.com/48b90791a3.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-RH9KLZQW7K"></script>
+	<script>
+ 		window.dataLayer = window.dataLayer || [];
+ 		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+
+  		gtag('config', 'G-RH9KLZQW7K');
+	</script>
 	<title>Introduction</title>
 </head>
 <body>
 	<header>
 		<nav>
-			<ul>
+			<ul class="nav_links">
 				<li class ="corner"><a href="#intro">Basic 65% Keyboard Guide</a></li>
 				<li class="current"><a>Introduction</a></li>
 				<li><a href = "switches.html">Switches & Stabs</a></li>
