--- a/assembly.html
+++ b/assembly.html
@@ -9,12 +9,21 @@
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<script src="https://kit.fontawesome.com/48b90791a3.js" crossorigin="anonymous"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RH9KLZQW7K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RH9KLZQW7K');
+</script>
 	<title>The Finale</title>
 </head>
 <body>
 	<header>
 		<nav>
-			<ul>
+			<ul class="nav_links">
 				<li class ="corner"><a href="#intro">Basic 65% Keyboard Guide</a></li>
 				<li><a href = "index.html" >Introduction</a></li>
 				<li><a href = "switches.html">Switches & Stabs</a></li>
