--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 	<title>Introduction</title>
 </head>
 <body>
+	<a class="skip" href="#intro">Skip to Main Content</a>
 	<header>
 		<nav>
 			<ul class="nav_links">
-				<li class ="corner"><a href="#intro">Basic 65% Keyboard Guide</a></li>
 				<li class="current"><a>Introduction</a></li>
 				<li><a href = "switches.html">Switches & Stabs</a></li>
 				<li><a href = "soldering.html">Soldering</a></li>
@@ -34,6 +34,7 @@
 	</header>
 	<main>
 		<div>
+			
 			<p id="intro"><img src = "images/iron.png" class = "mainphoto" alt ="rectangular keyboard with cafe style keycaps and a runic badge"></p>
 			<p>Many of us have jobs that require us to sit in front of a computer screen using
 				our keyboards for hours. So wouldn't it be nice to have a custom keyboard that is
